# pangea-prompt-lab

./: .env.example  .gitignore  LICENSE  README.md  aiguard_lab.py  prompt_lab.py  pyproject.toml
api/: pangea_api.py
config/: detectors.py  log_fields.py  overrides.py  settings.py
data/: sample_report.txt  summary.txt  test_dataset.json  test_dataset.jsonl
defaults/: defaults.py
manager/: aiguard_manager.py  efficacy_tracker.py
testcase/: testcase.py
tests/: example.overrides.expected_detectors.json
utils/: colors.py  utils.py
