[tool.poetry]
name = "pangea-prompt-lab"
version = "0.1.0"
description = ""
authors = ["Nikita <nikita.mader@pangea.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
argparse = "^1.4.0"
tzlocal = "^5.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
